--- a/styel.css
+++ b/styel.css
@@ -412,3 +412,192 @@
     text-indent: 30px;
     margin-top: 20px;
 }
+
+
+
+/* Page 2 */
+
+#main-container2 {
+    background-color: rgb(255, 249, 249);
+    width: 100%;
+    height: 1080px;
+    display: flex;
+    margin-top: 50px;
+}
+
+.main-a1 {
+    position: absolute;
+    top: 1190px;
+    color: #2C89FF;
+    position: absolute;
+    left: 440px;
+    font-size: 20px;
+}
+
+.main-button1 {
+    width: 133px;
+    height: 50px;
+    background-color: #2C89FF;
+    border-radius: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    position: absolute;
+    top: 1160px;
+    right: 110px;
+}
+
+.main-slider1 {
+    width: 1000px;
+    height: 890px;
+    border: 1px solid #00000040;
+    border-radius: 20px;
+}
+
+.main-sub-slider {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.main-slider-text1{
+    font-size: 40px;
+    margin-right: 100px;
+}
+
+.main-slider-button1 {
+    width: 317px;
+    height: 55px;
+    background-color: #EBEBEB;
+    border-radius: 51px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 100px;
+    font-size: 20px;
+    color: #2C89FF;
+}
+
+.main-slider-icon {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #2C89FF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    margin-right: 5px;
+}
+
+.main-slider-button2 {
+    width: 178px;
+    height: 55px;
+    background: linear-gradient(270deg, #2C5E9D 0%, #013576 100%);
+    border-radius: 51px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: white;
+}
+
+.sub-slider-a {
+    font-size: 18px;
+    color: black;
+    margin-left: 42px;
+}
+
+.main-type {
+    display: flex;
+}
+
+.type {
+    width: 164px;
+    height: 45px;
+    background-color: #EDEFF3;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-left: 40px;
+    margin-top: 20px;
+}
+
+.sub-type {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
+.sub-type-p {
+    margin-left: 10px;
+    font: 20px;
+}
+
+
+.sidebar-header {
+    display: flex;
+    align-items: center;
+    margin-left: 40px;
+    margin-top: 20px;
+    width: 800px;
+    height: 33px;
+}
+
+.sidebar-header-text {
+    font-size: 20px;
+}
+
+.sidebar-header-export {
+    width: 133px;
+    height: 33px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: #5A769B;
+    margin-left: 20px;
+}
+
+.sidebar-header-import {
+    width: 133px;
+    height: 33px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: #5A769B;
+    margin-left: 20px;
+}
+
+.sidebar-header-i {
+   position: relative;
+   left: 500px;
+}
+
+.header {
+    width: 750px;
+    height: 33px;
+    color: #5A769B;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.header-name1 {
+    width: 27px;
+    height: 27px;
+    border-radius: 3px;
+    border: 0.5px solid #5A769B;
+}
+
+span {
+    width: 750px;
+    border-top: 5px solid #8db7ec;
+}
