--- a/styel.css
+++ b/styel.css
@@ -17,7 +17,7 @@
     background-color: #2C5E9D;
     display: flex;
     flex-direction: column;
-    justify-content: ;
+    justify-content: none;
 }
 
 .logo-section {
@@ -114,7 +114,7 @@
 }
 
 .dropdown-button {
-    display: ;
+    display: none;
 }
 
 .menu-item-icon {
@@ -147,9 +147,6 @@
     font-size: 10px;
 }
 
-.menu-item-buttom {
-
-}
 .icon-container {
     position: relative;
     width: 160px;
